0x02-functions_nested_loops/9-times_table.c:
_table.c:33:13: error: expected ‘;’ before ‘}’ token
   33 | _putchar(32)
      |             ^
      |             ;
   34 | }
      | ~            
